Work on mobile issues

--- a/apps/client/src/app/road-map/road-map.component.scss
+++ b/apps/client/src/app/road-map/road-map.component.scss
@@ -14,6 +14,10 @@ product-feedback-app-back-button {
     grid-template-columns: repeat(3, 1fr);
     margin-block-start: 3rem;
     gap: 1rem;
+
+    @media (max-width: 700px) {
+        display: block;
+    }
 }
 
 .roadmap__heading {
@@ -31,4 +35,10 @@ product-feedback-app-back-button {
 
 .live-cards {
     --status-color: #62BCFA;
+}
+
+product-feedback-app-header {
+    --margin-inline: -1rem;
+    --margin-block: -2rem;
+    --padding: 2rem;
 }
