--- a/apps/client/src/app/shared/header/header.component.scss
+++ b/apps/client/src/app/shared/header/header.component.scss
@@ -12,6 +12,10 @@
 
   @media (max-width: 700px) {
     border-radius: 0;
+    margin-inline: var(--margin-inline);
+    margin-block: var(--margin-block);
+    padding: var(--padding, 1rem);
+  
   }
 }
 
