--- a/apps/client/src/app/shared/menu/menu.component.scss
+++ b/apps/client/src/app/shared/menu/menu.component.scss
@@ -1,9 +1,6 @@
 .menu__container {
   background-color: var(--background-color);
   border-radius: 10px;
-  position: absolute;
-  top: var(--menu-top, 9rem);
-  right: var(--menu-right, 45%);
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
   width: var(--menu-width, 15rem);
   z-index: 100;
