--- a/apps/client/src/app/suggestions/heading-tile/heading-tile.component.scss
+++ b/apps/client/src/app/suggestions/heading-tile/heading-tile.component.scss
@@ -15,4 +15,5 @@
   cursor: pointer;
   outline: inherit;
   display: none;
+  margin: 1rem;
 }
