--- a/apps/client/src/app/suggestions/suggestions.component.scss
+++ b/apps/client/src/app/suggestions/suggestions.component.scss
@@ -110,3 +110,20 @@
     flex: 0;
   }
 }
+
+.header__img, .header__heading {
+  @media (max-width: 700px) {
+    display: none;
+  }
+}
+
+.menu {
+  position: absolute;
+  top: 6rem;
+  left: 15rem;
+  z-index: 100;
+
+  @media (max-width: 700px) {
+    left: 1rem;
+  }
+}
